Fix warnings, upgrade to Java 9, and Gradle 4.2